--- a/src/components/MainFeed/MainFeed.css
+++ b/src/components/MainFeed/MainFeed.css
@@ -6,14 +6,52 @@
 }
 
 #sidebar {
-    background-color: grey;
+    background-color: lightgrey;
     margin: 0;
     padding: 20px;
     position: fixed;
+    height: 100%;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
-#sidebar svg, #sidebar img {
+#sidebar svg,
+#sidebar img {
     background-color: white;
     border: 2px solid black;
     border-radius: 100px;
+
+}
+
+#sidebar svg:hover,
+#sidebar img:hover {
+    cursor: pointer;
+}
+
+[data-tooltip] {
+    transition: all 2s;
+}
+
+[data-tooltip]:before {
+    position: absolute;
+    content: attr(data-tooltip);
+    color: white;
+    padding: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 10px;
+    width: fit-content;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.2s;
+}
+
+[data-tooltip]:hover:before {
+    background-color: black;
+    opacity: 1;
 }
