--- a/src/components/MainFeed/MainFeed.css
+++ b/src/components/MainFeed/MainFeed.css
@@ -22,7 +22,7 @@
 #sidebar img {
     background-color: white;
     border: 2px solid black;
-    border-radius: 100px;
+    border-radius: 50%;
 
 }
 
