--- a/src/components/NewPostPage/NewPostPage.css
+++ b/src/components/NewPostPage/NewPostPage.css
@@ -3,10 +3,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
+}
+
+.bg {
     background-image: url('../../img/paper.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    
 }
 
 .choose-post-type {
@@ -28,4 +32,26 @@
 .btn {
     width: fit-content;
     padding: 20px;
+}
+
+[data-backbutton]:before {
+    position: fixed;
+    left: 88px;
+    top: 41px;
+    content: attr(data-backbutton);
+    color: black;
+    padding: 5px;
+    text-align: center;
+    opacity: 0;
+    width: 0px;
+    height: 18px;
+    transition: width 1s;
+    overflow: hidden;
+}
+
+[data-backbutton]:hover:before {
+    background-color: black;
+    color: white;
+    width: 150px;
+    opacity: 1;
 }
