--- a/src/components/MainFeed/MainFeed.css
+++ b/src/components/MainFeed/MainFeed.css
@@ -6,9 +6,12 @@
 }
 
 #main-feed {
-    margin-left: 50%;
+    width: 60%;
+    margin-left: 25%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 #sidebar {
@@ -55,4 +58,8 @@
 [data-tooltip]:hover:before {
     background-color: black;
     opacity: 1;
+}
+
+.post-preview:hover {
+    cursor: pointer;
 }
