--- a/src/components/MainFeed/MainFeed.css
+++ b/src/components/MainFeed/MainFeed.css
@@ -6,12 +6,13 @@
 }
 
 #main-feed {
-    width: 60%;
+    max-width: 60%;
     margin-left: 25%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    overflow-x: hidden;
 }
 
 #sidebar {
