--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -111,3 +111,9 @@ input {
   margin: 5px;
   margin-bottom: 10px;
 }
+
+.swal2-container.swal2-backdrop-show, .swal2-container.swal2-noanimation {
+  background: rgba(255, 255, 255, 0) !important;
+    backdrop-filter: blur(3.5px) !important;
+    -webkit-backdrop-filter: blur(3.5px) !important;
+}
