--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,3 +1,10 @@
+/* custom font */
+
+@font-face {
+  font-family: TraceyTreat;
+  src: url(../../fonts/TraceyTreat.ttf);
+}
+
 .nav {
   /* flex box layout */
   display: flex;
@@ -14,11 +21,14 @@
 }
 
 .nav-title {
-  font-size: 24px;
+  font-size: 48px;
   font-weight: 700;
   color: #f2f2f2;
-  padding-left: 10px;
+  padding-top: 10px;
+  padding-left: 20px;
   margin: 0;
+  font-family: TraceyTreat, Arial, Helvetica, sans-serif;
+  letter-spacing: .2rem;
 }
 
 .navLink {
