--- a/src/components/MainFeed/MainFeed.css
+++ b/src/components/MainFeed/MainFeed.css
@@ -54,7 +54,10 @@
 }
 
 #sidebar {
-    background-color: lightgrey;
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     margin: 0;
     padding: 20px;
     position: fixed;
