--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,7 @@ body,
 }
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Verdana, 'Segoe UI', Tahoma, Geneva, sans-serif;
   margin: 0px;
   background-image: none;
 }
