--- a/src/components/PostDetails/PostDetails.css
+++ b/src/components/PostDetails/PostDetails.css
@@ -5,6 +5,15 @@
     align-items: center;
 }
 
+.post-details-post {
+    display: flex;
+    flex-direction: row;
+}
+
 #reply-list {
     align-items: flex-start;
+}
+
+#reply-list {
+    list-style: none;
 }
