--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -87,7 +87,7 @@ Grid
 
 .big-text {
   font-family: 'Tracey Reborn', Arial, Helvetica, sans-serif;
-  font-size: 100px;
+  font-size: 90px;
   /*transform: skew(14deg, 8deg);*/
   position: absolute;
   left: 30px;
@@ -98,9 +98,10 @@ Grid
   font-family: 'Tracey Reborn', Arial, Helvetica, sans-serif;
   /*font-family: Tahoma, Geneva, Verdana, sans-serif;*/
   position: absolute;
-  font-size: 35px;
+  font-size: 30px;
   right: 80px;
   bottom: 393px;
+  text-shadow: 2px 0 white;
 }
 
 .landing-page {
@@ -115,6 +116,7 @@ Grid
 .drawing-person {
   position: absolute;
   right: 380px;
+  bottom: 0px;
 }
 
 .landing-page-container {
