--- a/src/components/PostDetails/PostDetails.css
+++ b/src/components/PostDetails/PostDetails.css
@@ -1,3 +1,8 @@
+.post-details-bg {
+    /*background-color: rgb(205, 205, 205);*/
+    height: 100vh;
+    margin: 0px;
+}
 .post-details-content {
     display: flex;
     flex-direction: column;
@@ -7,7 +12,52 @@
 
 .post-details-post {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    padding: 30px;
+    margin:50px;
+    border: 1px solid darkgray;
+    border-radius: 30px;
+    box-shadow: 0px 2px 2px black;
+    font-size: 30px;
+    align-items: center;
+    background-color: white;
+}
+
+.post-details-image img {
+    border: 1px solid black;
+    box-shadow: 0px 2px 2px black;
+}
+
+.post-details-replies button {
+    align-self: center;
+}
+
+.post-details-header {
+    font-weight: normal;
+    font-size: 16px;
+}
+
+.post-details-header a {
+    color: rgb(41, 146, 62);
+    text-decoration: none;
+    font-weight: bold;
+}
+.post-details-icons {
+    align-self: flex-end;
+}
+
+.post-details-icons svg, .post-details-replies svg {
+    transform: scale(1);
+    margin: 5px;
+}
+
+.post-details-icons svg:hover, .post-details-replies svg:hover {
+    transform: scale(1.25);
+}
+
+.post-details-icons svg:active, .post-details-replies svg:active {
+    transform: scale(1.5);
+    filter: drop-shadow(0px 0px 5px yellow);
 }
 
 #reply-list {
@@ -16,4 +66,25 @@
 
 #reply-list {
     list-style: none;
+    
+}
+
+.post-details-replies {
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.post-details-replies h4 {
+    text-align: center;
+    margin: 30px;
+}
+
+.post-details-replies li {
+    border:1px solid darkgray;
+    border-radius: 30px;
+    padding:30px;
+    box-shadow: 0px 2px 2px black;
+    background-color: white;
+    margin-right: 40px;
 }
