--- a/src/components/UserDetails/UserDetails.css
+++ b/src/components/UserDetails/UserDetails.css
@@ -55,3 +55,11 @@
     border: 2px solid rgb(112, 112, 112);
     padding: 5px;
 }
+
+.stats-hidden {
+    display: none;
+}
+
+.stats-visible {
+    display: block;
+}
